<resources>
    <string name="firefox_brand_name">Firefox</string>
    <string name="pocket_brand_name">Pocket</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="urlbar_hint">Search or enter address</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="preference_language">Language</string>
    <string name="preference_language_systemdefault">System default</string>
    <string name="preference_category_privacy">Privacy</string>
    <string name="preference_privacy_block_ads">Block ad trackers</string>
    <string name="preference_privacy_block_ads_summary">Some ads track site visits, even if you don’t click the ads</string>
    <string name="preference_privacy_block_analytics">Block analytic trackers</string>
    <string name="preference_privacy_block_analytics_summary">Used to collect, analyze and measure activities like tapping and scrolling</string>
    <string name="preference_privacy_block_social">Block social trackers</string>
    <string name="preference_privacy_block_social_summary">Embedded on sites to track your visits and to display functionality like share buttons</string>
    <string name="preference_privacy_block_content">Block other content trackers</string>
    <string name="preference_privacy_block_content_summary2">Enabling may cause some pages to behave unexpectedly</string>
    <string name="preference_category_performance">Performance</string>
    <string name="preference_performance_block_webfonts">Block Web fonts</string>
    <string name="preference_performance_block_webfonts_summary">May result in missing icons or images</string>
    <string name="preference_mozilla_telemetry2">Send usage data</string>
    <string name="preference_privacy_notice">Privacy Notice</string>
    <string name="accessibility_announcement_loading">Loading</string>
    <string name="accessibility_announcement_loading_finished">Website loaded</string>
    <string name="content_description_forward">Navigate forward</string>
    <string name="content_description_reload">Reload website</string>
    <string name="content_description_back">Navigate back</string>
    <string name="external_app_prompt_title">Open link in another  app</string>
    <string name="external_app_prompt">You can leave %1$s to open this link in %2$s.</string>
    <string name="external_app_prompt_no_app_title">Find an app that can open link</string>
    <string name="external_app_prompt_no_app">None of the apps on your device are able to open this link. You can leave %1$s to search %2$s for an app that can.</string>
    <string name="external_multiple_apps_matched_exit">Exit Private Browsing?</string>
    <string name="errorpage_title">Problem loading page</string>
    <string name="errorpage_refresh">Try Again</string>
    <string name="error_connectionfailure_title">Unable to connect</string>
    <string name="error_connectionfailure_message">
    <![CDATA[
      <ul>
        <li>The site could be temporarily unavailable or too busy. Try again in a few moments.</li>
        <li>If you are unable to load any pages, check your mobile device’s data or Wi-Fi connection.</li>
      </ul>
    ]]>
    </string>
    <string name="error_connect_title">@string/error_connectionfailure_title</string>
    <string name="error_connect_message">@string/error_connectionfailure_message</string>
    <string name="error_timeout_title">The connection timed out</string>
    <string name="error_timeout_message">@string/error_connectionfailure_message</string>
    <string name="error_hostLookup_title">Server not found</string>
    <string name="error_hostLookup_message"><![CDATA[
      <ul>
        <li>Check the address for typing errors such as
          <strong>ww</strong>.example.com instead of
          <strong>www</strong>.example.com</li>
        <li>If you are unable to load any pages, check your device’s data or Wi-Fi connection.</li>
      </ul>
    ]]></string>
    <string name="error_malformedURI_title">The address isn’t valid</string>
    <string name="error_malformedURI_message"><![CDATA[
<ul>
  <li>Web addresses are usually written like <strong>http://www.example.com/</strong></li>
  <li>Make sure that you’re using forward slashes (i.e. <strong>/</strong>).</li>
</ul>
    ]]></string>
    <string name="error_redirectLoop_title">The page isn’t redirecting properly</string>
    <string name="error_redirectLoop_message"><![CDATA[
<ul>
  <li>This problem can sometimes be caused by disabling or refusing to accept cookies.</li>
</ul>
    ]]></string>
    <string name="error_unsupportedprotocol_title">The address wasn’t understood</string>
    <string name="error_unsupportedprotocol_message"><![CDATA[
<ul>
  <li>You might need to install other software to open this address.</li>
</ul>
    ]]></string>
    <string name="error_sslhandshake_title">Secure connection failed</string>
    <string name="error_sslhandshake_message"><![CDATA[
<ul>
  <li>This could be a problem with the server’s configuration, or it could be
someone trying to impersonate the server.</li>
  <li>If you have connected to this server successfully in the past, the error may
be temporary, and you can try again later.</li>
</ul>
     ]]></string>
    <string name="error_generic_title">Oops</string>
    <string name="error_generic_message">We can’t load this page for some reason.</string>
    <string name="your_rights">Your Rights</string>
    <string name="your_rights_content1"><![CDATA[%1$s is free and open source software made by Mozilla and other contributors.]]></string>
    <string name="your_rights_content2"><![CDATA[%1$s is made available to you under the terms of the <a href="%2$s">Mozilla Public License</a> and other open source licenses.]]></string>
    <string name="your_rights_content3"><![CDATA[You are not granted any rights or licenses to the trademarks of the Mozilla Foundation or any party, including the Mozilla, Firefox or %1$s names or logos. Additional information may be found <a href="%2$s">here</a>.]]></string>
    <string name="your_rights_content4"><![CDATA[Additional source code for %1$s is available under various other free and open source <a href="%2$s">licenses</a>.]]></string>
    <string name="your_rights_content5"><![CDATA[%1$s also uses blocklists provided by Disconnect, Inc. as separate and independent works under the <a href="%2$s">GNU General Public License v3</a>, and available <a href="%3$s">here</a>.]]></string>
    <string name="settings_cookies_dialog_title">Clear all cookies and site data</string>
    <string name="settings_cookies_dialog_content2">This will clear all cookies and site data. Clearing this information may sign you out of websites and delete web content that is stored offline.</string>
    <string name="turbo_mode">Turbo Mode</string>
    <string name="onboarding_turbo_mode_title">Turbo Mode helps you browse faster</string>
    <string name="onboarding_turbo_mode_body">Turbo Mode automatically blocks trackers and ads to help get you where you\'re going faster. If there\'s a speed bump – like a site that isn\'t behaving the way you expect – just turn Turbo Mode off.</string>
    <string name="onboarding_turbo_mode_button_on">Keep Turbo Mode Enabled</string>
    <string name="onboarding_turbo_mode_button_off">Turn Turbo Mode Off</string>
    <string name="turbo_mode_enabled_toast">Turbo Mode enabled</string>
    <string name="turbo_mode_disabled_toast">Turbo Mode disabled</string>
    <string name="button_keep_enabled">Keep enabled</string>
    <string name="button_turn_off">Turn off</string>
    <string name="turbo_mode_disable_a11y">Turn Turbo Mode Off</string>
    <string name="turbo_mode_enable_a11y">Turn Turbo Mode On</string>
    <string name="homescreen_unpin_tutorial_toast">Press and hold SELECT to unpin from homescreen</string>
    <string name="homescreen_tile_remove">Remove</string>
    <string name="nav_close_hint">Close</string>
    <string name="homescreen_unpin_a11y">Unpin</string>
    <string name="homescreen_title">Homescreen</string>
    <string name="pin_label">Pin to homescreen</string>
    <string name="notification_pinned_site">Pinned to Firefox TV homescreen</string>
    <string name="notification_unpinned_site">Removed from Firefox TV homescreen</string>
    <string name="notification_pinned_general2">Pinned to %1$s homescreen</string>
    <string name="notification_unpinned_general2">Removed from %1$s homescreen</string>
    <string name="pocket_home_tutorial_title">Introducing videos recommended by %1$s</string>
    <string name="pocket_home_tutorial_description">The most interesting videos on the web. Recommended by %1$s, now part of Mozilla.</string>
    <string name="pocket_home_tutorial_dismiss_button">Ok, got it</string>
    <string name="pocket_home_a11y_tile_focused">Video recommendation by %1$s</string>
    <string name="pocket_video_feed_recommended_videos_title">Recommended videos</string>
    <string name="pocket_video_feed_failed_to_load">Hmm. We’re having trouble displaying video recommendations by %1$s.</string>
    <string name="pocket_video_feed_reload_button">Try again</string>
    <string name="pocket_video_feed_a11y_navigation">Use left and right to move between videos</string>
    <string name="pocket_video_feed_a11y_feed_item_focused">%1$s on %2$s</string>
    <string name="google_search_tile_title">Search with Google</string>
    <string name="google_search_hint_text">Search with Google or enter address</string>
    <string name="blank_tile_title">Add website</string>
    <string name="preference_mozilla_telemetry_summary2">Mozilla strives to collect only what we need to provide and improve %1$s for everyone.</string>
    <string name="preference_mozilla_telemetry_summary">Learn more</string>
</resources>