<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/pref_key_telemetry"
        android:title="@string/preference_mozilla_telemetry2"
        android:defaultValue="false"
        android:layout="@layout/preference_layout"/>

    <Preference
        android:layout="@layout/preference_layout"
        android:title="@string/menu_about"/>

    <Preference
        android:layout="@layout/preference_layout"
        android:title="@string/preference_privacy_notice"/>

    <Preference
        android:layout="@layout/preference_layout"
        android:title="@string/settings_cookies_dialog_title"/>

</PreferenceScreen>
