<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/onboarding_background">

    <ImageView
        android:id="@+id/turboButton"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mozac_ic_rocket_filled" />

    <TextView
        android:id="@+id/onboardingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@string/font_roboto_light"
        android:text="@string/onboarding_turbo_mode_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turboButton" />

    <TextView
        android:id="@+id/onboardingBody"
        android:layout_width="506dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/onboarding_turbo_mode_body"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardingTitle" />

    <Button
        android:id="@+id/enableTurboMode"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="192dp"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_button"
        android:padding="16dp"
        android:text="@string/onboarding_turbo_mode_button_on"
        app:layout_constraintEnd_toStartOf="@+id/disableTurboMode"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardingBody" />

    <Button
        android:id="@+id/disableTurboMode"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="192dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_button"
        android:text="@string/onboarding_turbo_mode_button_off"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enableTurboMode"
        app:layout_constraintTop_toBottomOf="@+id/onboardingBody" />
</android.support.constraint.ConstraintLayout>
