<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    android:layout_marginStart="96dp"
    android:layout_marginRight="96dp"
    android:layout_marginEnd="48dp">

    <TextView
        android:id="@+id/bodyText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/settings_cookies_dialog_content2"
        style="@style/PreferenceBodyTextAppearance"
        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/SecondaryButtonNative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:text="@string/action_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirmButton" />

    <Button
        android:id="@+id/confirmButton"
        style="@style/PrimaryButtonNative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:text="@string/action_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Webview for clearing webview data -->
    <org.mozilla.focus.iwebview.IWebView
        android:id="@+id/settingsWebView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>